# gh-game-of-life

./: .gitignore  .pre-commit-config.yaml  README.md  action.yml  have_fun.ipynb  pyproject.toml
app/: main.py  pyproject.toml  requirements.txt
app/backend/: api.py
app/frontend/: index.html
app/public/: index.html  index.py
src/gh_game_of_life/: cli.py  constants.py  editor.py  generate.py  github_client.py
src/gh_game_of_life/core/: __init__.py  game.py
src/gh_game_of_life/game/: engine.py  renderer.py
src/gh_game_of_life/render/: gif.py
tests/: __init__.py  test_api.py  test_config.py  test_generate.py
tests/core/: test_cell_state.py  test_game.py  test_grid.py  test_quad_rules.py
tests/render/: test_render.py
