[project]
name = "gh-game-of-life"
version = "0.1.0"
description = "Visualizes GitHub contribution graphs as Conway's Game of Life."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "typer>=0.21.1",
]

[tool.uv.workspace]
members = [
    "app",
]
